graylog-terraform/security/sg-bastion.tf
resource "aws_security_group" "bastion" {
  name        = "bastion-sg"
  description = "SSH access"
  vpc_id      = aws_vpc.graylog.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
